# pyUPSTIlatex

./: .env.example  .gitignore  @parametres.pyUPSTIlatex.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENCE  README.md  TODO.md  pyUPSTIlatex.json  pyproject.toml
custom/: .env.template  README.md  config.toml.template  document.py.template
integration/commandes_windows/: pyUPSTIlatex_compilation.cmd  pyUPSTIlatex_infos_fichier.cmd
integration/yaml/: @parametres.pyUPSTIlatex.yaml
latex/UPSTI_Document/: README.md
latex/UPSTI_Document/AMC (QCM auto-corrigés)/: exempleListeEleves.csv
latex/UPSTI_Document/Exemples/: Lisezmoi.txt
latex/UPSTI_Document/Installation environnement LaTeX/: Reglages_Texmaker.ini
latex/UPSTI_Document/Snippets/: UPSTI_Snippets.aux  UPSTI_Snippets.out  UPSTI_Snippets.tex  (+1 more)
pyupstilatex/: __init__.py  accessibilite.py  cli.py  config.py  document.py  document_registry.py  file_helpers.py  file_latex_helpers.py  file_system.py  filesystem.py  handlers.py  logger.py  parsers.py  storage.py  utils.py
pyupstilatex/config/: README.md  config.default.toml  pyUPSTIlatex.json
scripts/import_programmes/: _commentaires-ATS-GC-2025.txt  _commentaires-ATS-II-2025.txt  _commentaires-MP2I-PSI-2021.txt  _commentaires-MPSI-MP-2021.txt  _commentaires-PCSI-PSI-2021.txt  _commentaires-PTSI-PT-2021.txt  _commentaires-TSI-2021.txt  convert_txt_to_xlsx.py  extrait_commentaires_programme.py
templates/latex/: base.tex.j2
templates/yaml/: parametres_compilation_rapide.yaml.j2  poly.yaml.j2
tests/: testOSI.htm  test_file_v1.tex  test_file_v3.tex
(+19 files in other folders)
